--- a/scale_banner/pubspec.yaml
+++ b/scale_banner/pubspec.yaml
@@ -1,8 +1,8 @@
 name: scale_banner
-description: A new Flutter package project.
+description: Fast create banner with scale animation in Flutter
 version: 0.0.1
-author:
-homepage:
+author: leozheng<zkt713@gmail.com>
+homepage: http://blog.leomobile.top/
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
